--- a/src/views/includes/header.pug
+++ b/src/views/includes/header.pug
@@ -7,5 +7,11 @@ html(lang="en")
 		a(href='/tasks') Tasks
 		|&nbsp
 		a(href='/profile') Profile
+		|&nbsp
+		a(href='/signin') Sign In
+		|&nbsp
+		a(href='/signup') Sign Up
+		|&nbsp
+		a(href='/signout') Sign Out
 		br
 	body
