--- a/src/views/tasks.pug
+++ b/src/views/tasks.pug
@@ -4,6 +4,10 @@ h2 Task list
 ul
 	each task in tasklist
 		li= task.title + ': ' + task.description
+			form(action="/edittask/" + task._id)
+				button(type="submit") Edit
+			form(action="/deletetask/" + task._id method="post")
+				button(type="submit") Delete
 
 form(action="/task")
 	button(type="submit") Create task
