--- a/src/views/signin.pug
+++ b/src/views/signin.pug
@@ -1,3 +1,4 @@
+include includes/header
 span Signin
 
 form(action="/signin" method="post")
@@ -5,5 +6,3 @@ form(action="/signin" method="post")
 	input(placeholder="Password" type="password" name="password")
 	button(type="submit") Enter
 
-form(action="/signup" )
-	button(type="submit") Register
