--- a/src/views/includes/header.pug
+++ b/src/views/includes/header.pug
@@ -8,10 +8,13 @@ html(lang="en")
 		|&nbsp
 		a(href='/profile') Profile
 		|&nbsp
+		a(href='/users') Users
+		|&nbsp
 		a(href='/signin') Sign In
 		|&nbsp
 		a(href='/signup') Sign Up
 		|&nbsp
-		a(href='/signout') Sign Out
+		form(action="/signout" method="post")
+			button(type='submit') Sign Out
 		br
 	body
