--- a/src/views/signup.pug
+++ b/src/views/signup.pug
@@ -1,5 +1,5 @@
 include includes/header
-span Signup
+h2 Signup
 
 form(action="/signup" method="post")
 	input(placeholder="Username" type="text" name="username")
