--- a/src/views/task.pug
+++ b/src/views/task.pug
@@ -1,5 +1,5 @@
 include includes/header
-span New task
+h2 New task
 
 form(action="/task" method="post")
 	input(placeholder="Title" type="text" name="title")
