--- a/src/views/signin.pug
+++ b/src/views/signin.pug
@@ -1,5 +1,5 @@
 include includes/header
-span Signin
+h2 Signin
 
 form(action="/signin" method="post")
 	input(placeholder="Email" type="text" name="email")
